--- a/banco-api/src/main/resources/application.properties
+++ b/banco-api/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=8080
 spring.application.name=banco-api
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.path=/h2-console
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+logging.level.org.springframework.web=DEBUG
+logging.level.com.treinando.banco.controller=DEBUG
